Updated the layout, added the Cerebrum

--- a/public/stylesheets/html.css
+++ b/public/stylesheets/html.css
@@ -1,484 +1,623 @@
 /**
- * Common Blocks
+ * Standard HTML elements
  */
-html,
-body {
-	height: 100%;
+* {
+	font-size: 100.01%;
 }
 
-#layout {
-	margin: 0;
-	min-height: 100%;
-	min-width: 970px;
-	position: relative;
-}
-
-
-/**
- * Header
- */
-#header {
-	clear: both;
-	padding-top: 35px;
-	position: relative;
-	width: 100%;
-	z-index: 1;
-}
-
-#header:after {
-	clear: both;
-	content: '';
-	display: block;
-	height: 0;
-}
-
-#header .from_blogs {
-	left: 80%;
-	position: absolute;
-	top: 35px;
-	width: 16%;
-}
-
-#header .from_blog {
-	font-size: .6875em;
-	margin-bottom: 2.5em;
-}
-
-#header .from_blog h3 {
-	font-family: 'Courier New', Courier, serif;
-	font-size: 1.18em;
-	margin: 0 0 .4em;
+address, blockquote, dd, dl, dt, form, h1, h2, h3, h4, h5, h6, li, p, ol, table, ul {
+	font-size: 100%;
+	margin: .75em 0 1em;
 	padding: 0;
 }
 
-#header .from_blog h3 a {
-	color: #000;
+div, td, th, tr {
+	font-size: 100%;
+	margin: 0;
+	padding: 0;
 }
 
-#header .from_blog p {
-	line-height: 1.6;
-	margin: .25em 0 .5em;
+input,
+select,
+textarea {
+	font-size: 100%;
 }
 
-#header .links {
-	color: #666;
-	font-size: .6875em;
-	line-height: 2;
-	position: relative;
+img {
+	border: 0;
+	margin: 0;
+	padding: 0;
 }
 
-#header .links a:hover img.normal,
-#header .links a img.disabled {
-	display: none;
-}
-
-#header .links a:hover .disabled {
-	display: inline;
-}
-
-#header .links form {
-	line-height: 1.2;
-	margin: .5em 0;
-}
-
-#header .links form div {
-	position: relative;
-}
-
-#header .links form .message {
-	margin-top: .3em;
-}
-
-#header .links form .message.error {
-	color: #f00;
-}
-
-#header .links label {
-	color: #a2a2a2;
-	display: block;
-	left: .1em;
-	margin: 1px 0 0 1px;
-	position: absolute;
-	top: .33em;
-}
-
-#header .links .text {
-	font-family: 'Courier New', Courier, serif;
-	font-size: 1em;
-	position: relative;
-	width: 15em;
-}
-
-
-/**
- * Logo
- */
-#logo_print {
-	display: none;
-}
-
-#logo {
-	float: left;
-	padding: 3px 0 0 3%;
-	width: 17%;
-}
-
-#logo a,
-#logo b {
-	font-size: 200%;
-	font-weight: bold;
+ins {
 	text-decoration: none;
 }
 
-#logo a:link,
-#logo a:visited {
-	color: #000;
+label[disabled="true"] {
+	opacity: 0.4;
+}
+
+sub,
+sup {
+	font-size: 75%;
+	line-height: 0;
+	position: relative;
+	top: -0.5em;
+	vertical-align: baseline;
+}
+
+sub {
+	top: 0.1em;
+}
+
+code,
+pre {
+	font-family: monospace;
+	font-size: 100%;
+}
+
+b {
+	font-weight: normal;
+}
+
+hr {
+	border: 0 hidden;
+	border-top: 1px solid #d6d6d6;
+	clear: both;
+	height: 0;
 }
 
 
 /**
- * Navigation
+ * Lists
  */
-#navigation {
+ul {
+	list-style-type: none;
+}
+
+li {
+	margin: 0.5em 0 0.5em 1.3em;
+}
+
+ol li {
+	margin: 0.5em 0 0.5em 1.7em;
+}
+
+ul > li:before {
+	content: '\2014\a0';
+	float: left;
+	margin-left: -1.25em;
+}
+
+ul > li > *:first-child:-moz-first-node {
+	margin-top: -1.2em;
+}
+
+ul > li > * {
+	text-indent: 0;
+}
+
+ul.navigation,
+.navigation ul {
+	list-style-image: none;
+	margin-left: -1.3em;
+}
+
+.navigation li ul {
+	margin: 0.5em 0 0 0;
+}
+
+.navigation li:before {
+	content: '';
+	float: none;
+	margin-left: 0;
+}
+
+ul.navigation > li > *:first-child:-moz-first-node,
+.navigation ul > li > *:first-child:-moz-first-node {
+	margin-top: 0;
+}
+
+dl {
+	margin: 1em 0;
+}
+
+dt {
+	margin: 0 0 .5em;
+}
+
+dd {
+	margin: 0 0 3em;
+}
+
+
+/**
+ * Tables
+ */
+table,
+td,
+th {
+	border-spacing: 0;
+	border: 0;
+	font-weight: normal;
+}
+
+th, td {
+	padding: .5em .75em;
+	text-align: left;
+	vertical-align: top;
+}
+
+th {
 	color: #999;
-	float: left;
-	font-family: 'Courier New', Courier, Arial, Helvetica, sans-serif;
-	margin-right: 2%;
-	position: relative;
-	width: 57%;
+	font-size: 90%;
 }
 
-#navigation table {
-	font-size: .8125em;
+table td.b_r,
+table th.b_r {
+	border-right: 1px solid #888;
+}
+
+table td.b_b, table th.b_b {
+	border-bottom: 1px solid #888;
+}
+
+table td.number,
+table th.number {
+	text-align: right;
+}
+
+
+/**
+ * Links
+ */
+a:link,
+a:visited {
+	text-decoration: underline;
+}
+
+a:link,
+.pseudo {
+	color: #0049a4;
+}
+
+.pseudo {
+	border-bottom: 1px dashed;
+	cursor: pointer;
+	text-decoration: none;
+}
+
+a:visited {
+	color: #0049a4;
+}
+
+a:hover,
+.pseudo:hover {
+	border-bottom: 0;
+	color: #000 !important;
+	text-decoration: none;
+}
+
+a:link *, a:visited * {
+	cursor: pointer;
+}
+
+a * {
+	display: inline;
 	margin: 0;
-	white-space: nowrap;
-	width: 100%;
-}
-
-#navigation td {
 	padding: 0;
 }
 
-#navigation td.last a,
-#navigation td.last b {
-	visibility: hidden;
+a.popup {
+
 }
 
-#navigation .navigation {
-	color: #000;
-	float: none;
-	font-size: .846em;
-	font-size: .923em;
-	margin: .5em 10px 0 0;
-	position: relative;
-}
+a.external {
 
-#navigation li {
-	float: none;
-	line-height: 1.6;
-	margin: 0;
-	min-width: 0;
-}
-
-#navigation li a {
-	text-decoration: none;
-}
-
-#navigation td.last li a,
-#navigation td.last li b {
-	visibility: visible;
-}
-
-#navigation .lines {
-	display: block;
-	font-size: .846em;
-	font-size: .923em;
-	left: 0;
-	position: absolute;
-	top: 3.3em;
-	width: 100%;
-}
-
-#navigation .lines .l {
-	border-top: 1px solid #e5e5e5;
-	display: block;
-	height: 1.6em;
-	margin-bottom: -1px;
-}
-
-#layout.light #header .links {
-	display: none;
 }
 
 
 /**
- * Languages
+ * Headers
  */
-#languages {
-	font-size: .6875em;
-	left: 3%;
-	position: absolute;
-	top: 130px;
-}
-
-#languages a {
-	border-bottom: 1px solid #f00;
-	color: #15a;
-	text-decoration: none;
+/*
+@font-face {
+	font-family: EuroSansProLig;
+	src: url(../media/informa_pro.eot);
 }
 
 
-/**
- * Content
- */
-#content {
-	clear: both;
-	padding: 1.2em 0 5.5em;
-	position: relative;
-	width: 100%;
+@font-face {
+  font-family: InformaPro;
+  src: local("InformaPro"),
+       url(../media/informa_pro.otf) format("opentype");
+}*/
+
+
+h1, h2, h3, h4, h5, h6 {
+	font-family: Helvetica, Arial, Helvetica, sans-serif;
+	font-weight: normal;
+	line-height: 1.1;
 }
 
-#content:after {
-	clear: both;
-	content: '';
-	display: block;
-	height: 0;
-}
-
-#content .main {
-	float: left;
-/* 	font-family: Arial, Helvetica, sans-serif; */
-	font-family: 'Courier New', Courier, Arial, Helvetica, sans-serif;
-	font-size: .8125em;
-	margin-right: 2%;
-	padding-left: 20%;
-	position: relative;
-	width: 57%;
+h1 {
+	font-size: 2.438em;
+	font-weight: bold;
+	margin: .5em 0 .25em 20%;
+	padding: 0;
+	/*width: 57%;*/
 	width: 550px;
 }
 
-#content .main-contact {
-	float: left;
-/* 	font-family: Arial, Helvetica, sans-serif; */
-	font-family: 'Courier New', Courier, Arial, Helvetica, sans-serif;
-	font-size: .8125em;
-	margin-right: 2%;
-	padding-left: 20%;
-	position: relative;
-	width: 57%;
-	width: 640px;
+h1.sub {
+	font-size: 1.75em;
 }
 
-#content .extra_main {
-	float: left;
-	margin-right: 2%;
-	padding-left: 20%;
-	position: relative;
-	width: 57%;
+h2 {
+	font-size: 2.07em;
+	margin: 0 0 -.4em;
+	padding: 1.25em 0 .5em;
 }
 
-#content .extra_main .main {
-	margin-right: 0;
-	padding-left: 0;
+h3 {
+	font-size: 130%;
+	margin: 0 0 -.45em;
+	padding: .8em 0 .4em;
 }
 
-#content .extra {
-	float: left;
-	font-size: .8125em;
-	width: 18%;
-}
-
-#content .main_text {
-	font-size: 1.46em;
-	margin-bottom: 2em;
-}
-
-
-/**
- * Footer
- */
-#footer {
-	bottom: 0;
-	clear: both;
-	left: 0;
-	padding-bottom: 1.44em;
-	position: absolute;
-	width: 100%;
-}
-
-#footer .made_in {
-	font-size: .6875em;
-	letter-spacing: .01em;
-	margin: 0 0 0 auto;
-	padding: 2.7em 0 0;
-	position: relative;
-	text-align: center;
-	width: 20%;
-}
-
-#footer .made_in a {
-	color: #888;
-}
-
-#footer .copyright {
-	color: #666;
-	float: left;
-	font-size: .6875em;
-	padding-left: 3%;
-	width: 15%;
-}
-
-#footer .contacts {
-	float: left;
-	font-size: .6875em;
-	padding: 1.2em 0 0 2%;
-}
-
-#footer .contacts,
-#footer .contacts a {
-	color: #666;
-}
-
-
-/**
- * Popup
- */
-.popup {
-	background: #fff;
-	font-size: .8125em;
-	left: 50%;
-	margin: 0 0 0 -25.3em;
-	overflow: hidden;
-	padding: 2.3em;
-	position: absolute;
-	top: 180px;
-	width: 46em;
-	z-index: 1;
-}
-
-.popup .popup_container {
-	position: relative;
-}
-
-.popup .icon_close {
-	cursor: pointer;
-	left: auto;
-	right: 2.3em;
-	top: 2.3em;
-}
-
-.popup h3 {
-	font-size: 1.615em;
-	margin-top: 0;
-	padding-right: 30px;
-	padding-top: 0;
-}
-
-.popup .content {
-	height: 26.5em;
-	margin-top: 1.5em;
-	overflow: auto;
-	padding-right: 30px;
-	position: relative;
-}
-
-.fader {
-	background: #fff;
-	filter: alpha(opacity=70);
-	height: 100%;
-	left: 0;
-	opacity: 0.7;
-	position: fixed;
-	top: 0;
-	width: 100%;
-	z-index: 1;
-}
-
-
-/**
- * Event Popup
- */
-.event_popup .date {
-	font-size: .846em;
-}
-
-.event_popup .share {
-	font-size: .846em;
-	left: 45.6em;
-	position: absolute;
-	top: -.2em;
-}
-
-.event_popup .share .pseudo {
-	border-bottom: 1px dotted;
-	color: #000;
-}
-
-.event_popup .content a:hover {
-	color: #f00 !important;
-}
-
-.event_popup .content img {
-	display: block;
-	margin: 1.75em auto;
-}
-
-
-/**
- * Columns
- */
-.columns {
-	clear: left;
-	zoom: 1;
-}
-
-.columns:after {
-	clear: both;
-	content: '';
-	display: block;
-	height: 0;
-}
-
-.columns .column {
-	float: left;
-	margin-right: -1px;
-	padding-right: 6%;
-	width: 47%;
-	zoom: 1;
-}
-
-.columns .column_last {
-	padding-right: 0 !important;
-}
-
-.columns_3 .column {
-	padding-right: 5%;
-	width: 30%;
-}
-
-
-/**
- * Questions
- */
-dl.questions dt {
+h4 {
+	font-size: 110%;
 	font-weight: bold;
+	line-height: 1.2;
+	margin: 0 0 -.6em;
+	padding: 1em 0 0;
+}
+
+h5 {
+	font-size: 100%;
+	margin: 0 0 -.6em;
+	padding: 1em 0 0;
+}
+
+h6 {
+	font-size: 100%;
+	font-weight: bold;
+	margin: 0 0 -.6em;
+	padding: 1em 0 0;
+}
+
+h2:first-child,
+h3:first-child {
+	margin-top: 0;
+}
+
+h1 + h2,
+h1 + h3,
+h2 + h3 {
+	margin-top: 0;
+}
+
+.parent_header {
+	font-family: Helvetica, Arial, Helvetica, sans-serif;
+	font-size: .9375em;
+	margin: 1.3em 0 -.5em 20%;
+	width: 57%;
+}
+
+.parent_header,
+.parent_header a {
+	color: #7f7f7f;
 }
 
 
 /**
- * Programme
+ * Layout
  */
-#content .programme {
-	font-size: .923em;
-	margin: .75em 0 1em;
-	text-align: center;
+body {
+	background: #fff;
+	color: #000;
+	font-family: 'Courier New', Courier, serif;
+	margin: 0;
+	padding: 0;
 }
 
-#content .programme p {
-	margin-top: .25em;
+
+/**
+ * Picture
+ */
+.picture {
+	margin: 2em 0;
+	position: relative;
 }
 
-#content .programme,
-#content .programme a {
-	color: #f00 !important;
+.picture .description {
+	color: #999;
+	font-size: 0.9em;
+/* 	font-style: italic; */
+	margin-left: 30px;
+	left: 100%;
+	position: absolute;
+	top: 0;
+	width: 13em;
+}
+
+
+/**
+ * Misc
+ */
+.phone,
+.nobr {
+	white-space: nowrap;
+}
+
+.hidden,
+.js .jhidden {
+	display: none !important;
+}
+
+.errors {
+	color: #c66;
+}
+
+.before_list {
+	margin-bottom: -.5em;
+}
+
+.measurer {
+	left: 0;
+	height: 1em;
+	line-height: 1em;
+	position: absolute;
+	top: -1em;
+	visibility: hidden;
+	width: 100%;
+}
+
+.left {
+	float: left;
+	margin: 0 1em 0 0;
+}
+
+.right {
+	float: right;
+	margin: 0 0 0 1em;
+}
+
+.phone {
+	white-space: nowrap;
+}
+
+.footnotes {
+	color: #666;
+	font-size: .846em;
+	margin: 2em 0;
+}
+
+.footnotes .footnote {
+	margin-left: -.7em;
+}
+
+.footnotes p {
+	margin-top: 0;
+}
+
+address {
+	font-style: normal;
+}
+
+div.address {
+	font-size: 110%;
+}
+
+blockquote {
+	border-left: 1px solid #008;
+	border-right: 1px solid #008;
+	margin: 0 20px 2em;
+	padding: 0 20px;
+}
+
+blockquote p {
+	margin-top: 0;
+}
+
+blockquote .source {
+	color: #999;
+	margin-top: -.5em;
+}
+
+.comment {
+	background: #f5f5f5;
+	font-size: 90%;
+	padding: 1px 10px;
+}
+
+.incut {
+	color: #666;
+	font-size: .846em;
+}
+
+.empty {
+	color: #aaa;
+}
+
+
+/**
+ * Simple form
+ */
+.simple_form .row {
+	margin: 0 0 1em;
+	clear: left;
+	width: 100%;
+}
+
+.simple_form .label {
+	float: left;
+	font-weight: normal;
+	margin: 0 -100% 0 0;
+	width: 5.2em;
+}
+
+.simple_form .field {
+	margin: 0 0 0 5.7em;
+}
+
+.simple_form .field .text {
+	width: 95%;
+}
+
+.simple_form .selector {
+	line-height: 1.2em;
+	margin: 0 0 .5em;
+	min-height: 12px;
+	position: relative;
+	width: 100%;
+}
+
+.simple_form .selector input {
+	height: 14px;
+	left: 0;
+	margin: -6px 0 0;
+	position: absolute;
+	top: .6em;
+}
+
+.simple_form .selector label {
+	display: block;
+	margin: 0 0 0 20px;
+}
+
+
+/**
+ * Icons
+ */
+.icon {
+	display: block;
+	left: 0;
+	overflow: hidden;
+	position: absolute;
+	top: 0;
+}
+
+.icon ins {
+	background: url(../i/icons.png) no-repeat;
+	display: block;
+	height: 49px;
+	left: 0;
+	overflow: hidden;
+	position: absolute;
+	top: 0;
+	width: 127px;
+}
+
+.icon_corner {
+	height: 13px;
+	width: 13px;
+}
+
+.icon_corner ins {
+	left: -38px;
+}
+
+.icon_plus {
+	height: 19px;
+	width: 19px;
+}
+
+.icon_email {
+	height: 11px;
+	width: 9px;
+}
+
+.icon_email ins {
+	left: -51px;
+}
+
+#layout.light .icon_plus ins {
+	left: -19px;
+}
+
+.icon_arrow_event {
+	height: 16px;
+	width: 16px;
+}
+
+.icon_arrow_event ins {
+	left: -60px;
+}
+
+.icon_hands {
+	height: 27px;
+	width: 31px;
+}
+
+.icon_hands ins {
+	left: -76px;
+}
+
+.icon_close {
+	height: 17px;
+	width: 17px;
+}
+
+.icon_close ins {
+	left: -76px;
+}
+
+.icon_calendar_left {
+	height: 17px;
+	width: 17px;
+}
+
+.icon_calendar_left ins {
+	left: -93px;
+}
+
+.icon_calendar_right {
+	height: 17px;
+	width: 17px;
+}
+
+.icon_calendar_right ins {
+	left: -110px;
+}
+
+.icon_video,
+.icon_audio,
+.icon_gallery,
+.icon_press,
+.icon_video_black,
+.icon_audio_black,
+.icon_gallery_black,
+.icon_press_black {
+	height: 15px;
+	width: 15px;
+}
+
+.icon_video ins,
+.icon_audio ins,
+.icon_gallery ins,
+.icon_press ins {
+	top: -19px;
+}
+
+.icon_video_black ins,
+.icon_audio_black ins,
+.icon_gallery_black ins,
+.icon_press_black ins {
+	top: -34px;
+}
+
+.icon_gallery ins,
+.icon_gallery_black ins {
+	left: -15px;
+}
+
+.icon_audio ins,
+.icon_audio_black ins {
+	left: -30px;
+}
+
+.icon_press ins,
+.icon_press_black ins {
+	left: -45px;
 }
