--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,7 @@
+<% if can? :create, @post %>
+  <%= link_to "Новый параграф", new_user_post_path(current_user) %>
+<% end %>
+
 <p>
   <b>Title:</b>
   <%= @post.title %>
@@ -13,6 +17,6 @@
   <%= @post.note %>
 </p>
 
-
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', user_posts_path(current_user) %>
+<% if can? :update, @post %>
+	<%= link_to 'Edit', edit_post_path(@post) %> |
+<% end %>
