Typography plugin integration

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,7 +9,7 @@
 
 <p>
   <b>Body:</b>
-  <%= @post.conversation.markdown.html_safe %>
+  <%= @post.conversation.markdown.typography.html_safe %>
 </p>
 
 <p>
