--- a/public/stylesheets/html.css
+++ b/public/stylesheets/html.css
@@ -679,6 +679,7 @@ small {
 
 .simple_form .hint {
 	color: #999;
+	display: inline-block;
 	font-size: 11px;
 	font-weight: normal;
 	line-height: 1.7;
@@ -753,6 +754,10 @@ small {
 	text-overflow: ellipsis;
 	text-shadow: white 0px 1px 0px;
 	text-transform: lowercase;
+}
+
+.simple_form input[type="checkbox"] {
+	margin-left: 0;
 }
 
 textarea {
