--- a/app/views/users/edit_profile.html.haml
+++ b/app/views/users/edit_profile.html.haml
@@ -8,10 +8,10 @@
       Профиль
       %ins
     %li
-      %a{:href => account_settings_url} Аккаунт
+      %a{:href => account_settings_user_url} Аккаунт
 .b-line.b-line-thin
 
-= simple_form_for @user, :url => profile_settings_path, :html => { :multipart => true } do |f|
+= simple_form_for @user, :url => profile_settings_user_path, :html => { :multipart => true } do |f|
   .columns
     .column.column-f-x2
       = f.input :fullname, :label => 'Имя и фамилия'
