--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -1,9 +1,7 @@
 .copyright
   %i.logo-small
   %p
-    © 2010 Talks, in pair with
-    = succeed "." do
-      %a{:href => "http://julieibragimova.com/"} you-know-who
+    © 2010 Talks, in pair with you-know-who
     %br/
     Использование материалов Talks разрешено только при наличии активной ссылки на источник.
     %br/
