Added the Vote model

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,6 +1,3 @@
 .columns
-  .column.column-x2
-    
-  .column.column-x3
-              
-  .column.column-x1.column-last
+  .column.column-full.column-last
+    %h1 Ahoj, přatele!
