Admin panel layout and content

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,3 +1,5 @@
 .columns
   .column.column-full.column-last
     %h1 Ahoj, přatele!
+    %br
+    = link_to 'Interpol: The Scale', 'http://www.weborama.ru/#/music/Interpol/Our_Love_To_Admire/The_Scale/'
