--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,7 +3,8 @@
   %head
     = render "shared/meta"    
   %body    
-    #layout
+    = render "shared/admin_pane"
+    #layout      
       #header
         = render "shared/header"
     
