--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -34,4 +34,5 @@
       = f.input :picture_author_link, :as => :url, :label => 'Ссылка на автора изображения'
       %hr/
       
-      = f.input :song, :as => :text, :label => 'Песня', :hint => 'Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.'
+      = f.input :song_title, :label => 'Название песни', :hint => 'Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.'
+      = f.input :song_link, :label => 'Ссылка на песню', :hint => 'Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.'
