--- a/public/stylesheets/html.css
+++ b/public/stylesheets/html.css
@@ -776,3 +776,67 @@ textarea {
 .b-button {
 	width: 200px;
 }
+
+/**
+ * Admin Pane
+ */
+div.admin-pane-wrap {
+  position: absolute;
+  width: 100%;
+  background: black;
+  z-index: 1000; }
+
+div.admin-pane-switcher {
+  background: black;
+  width: 100%;
+  height: 10px;
+  position: ablosute;
+  z-index: 101;
+  cursor: pointer; }
+
+div.admin-pane {
+  position: relative;
+  width: 900px;
+  margin: 0 auto;
+  margin-top: 5px;
+  padding-top: 5px; }
+  div.admin-pane ul.admin-categories {
+    font-size: 30px;
+    padding-bottom: 5px;
+    border-bottom: 4px solid #ccc; }
+    div.admin-pane ul.admin-categories li {
+      padding-right: 30px;
+      display: inline-block; }
+    div.admin-pane ul.admin-categories li.posts-category {
+      width: 178px; }
+  div.admin-pane div.admin-logo {
+    width: 100%;
+    height: 109px;
+    margin-bottom: 20px; }
+    div.admin-pane div.admin-logo img {
+      float: left; }
+    div.admin-pane div.admin-logo div.logo-text {
+      padding-top: 27px;
+      margin-left: 160px; }
+    div.admin-pane div.admin-logo div.logo-text span {
+      display: block;
+      color: #ccc;
+      font-size: 14px; }
+  div.admin-pane ul.category-items {
+	float: left;
+	line-height: 140%;
+	margin-right: 100px;
+	margin-top: 18px; }
+    div.admin-pane ul.category-items a {
+      text-decoration: none;
+      font-size: 14px;
+      color: #ccc; }
+    div.admin-pane ul.category-items li.new a {
+      color: red; }
+  div.admin-pane li {
+    color: #ccc;
+    padding-right: 5px; }
+	li {
+		list-style: none;
+	}
+ */
