--- a/app/views/shared/_meta.html.haml
+++ b/app/views/shared/_meta.html.haml
@@ -15,6 +15,7 @@
                          "jcommon", 
                          "common", 
                          "round_picture",
+                         "rounded-corners-min",
                          "application.jquery"
                                                 
 = csrf_meta_tag
