--- a/app/views/shared/_sidebar.html.haml
+++ b/app/views/shared/_sidebar.html.haml
@@ -2,20 +2,20 @@
   .name
     .item.photo
       %span.round_picture{:style => "width: 50px; height: 50px;"}
-        = image_tag current_user.picture.url(:normal), :width => 50, :height => 50
+        TODO
     .item.info
       %strong
-        = current_user.fullname
+        TODO
       %small.age
-        = age current_user.birthday
+        age current_user.birthday
       %br/
       %small
-        = current_user.city 
+        TODO 
   %hr/
   .about
     %strong О себе
     %p
-      = current_user.about
+      TODO
   %hr/
   .accounts
     %strong Аккаунты
