--- a/public/stylesheets/html.css
+++ b/public/stylesheets/html.css
@@ -12,7 +12,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 	margin: 0px;
 	outline: 0px;
 	padding: 0px;
-	vertical-align: baseline;
+	vertical-align: top;
 }
 
 div, td, th, tr {
