--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -25,12 +25,14 @@
         .b-user
           %a{:href => user_posts_path(current_user)}
             = current_user.username
+            = current_user.invites_limit
             %span.round_picture{:style => "width: 25; height: 25"}
-              = image_tag current_user.picture.url(:small), :width => 25, :height => 25
+              = image_tag current_user.picture.url(:small), :width => 25, :height => 25      
       - if params[:action] == "edit_account" || params[:action] == "edit_profile"
         %li Настройки
       - else
         %li= link_to 'Настройки', profile_settings_user_path(current_user)
+      %li= link_to_unless_current 'Пригласить друзей', new_invite_path
       %li= link_to 'Выйти', sign_out_path, :method => :delete
   - else
     %ul.login-links
