--- a/app/views/invites/new.html.haml
+++ b/app/views/invites/new.html.haml
@@ -1,3 +1,7 @@
-%h1 Приглашения на Talks
+- title "Приглашения для друзей на Talks"
+
+= form_header "Приглашения на Talks"
+
+-# TODO: View the count of invites left
 
 = render 'form'
