--- a/app/views/invites/new.html.haml
+++ b/app/views/invites/new.html.haml
@@ -1,6 +1,6 @@
 - title "Приглашения для друзей на Talks"
 
-= form_header "Приглашения на Talks"
+= form_header "Приглашения на Talks", invites_left_count
 
 -# TODO: View the count of invites left
 
